@@ -1,9 +1,9 @@
 Package: EBSeq
 Type: Package
 Title:An R package for gene and isoform differential expression analysis of RNA-seq data 
-Version: 1.5.1
-Date: 2014-5-2
-Author: Ning Leng
+Version: 1.5.2
+Date: 2014-5-22
+Author: Ning Leng, Christina Kendziorski
 Maintainer: Ning Leng <nleng@wisc.edu>
 Depends: blockmodeling, gplots, R (>= 3.0.0)
 Description: Differential Expression analysis at both gene and isoform
