@@ -37,7 +37,7 @@ function(Data,NgVector=NULL,Conditions, sizeFactors, maxround, Pool=F, NumBin=10
 	if(length(AllZeroNames)>0 & Print==T)
 					    cat(paste0("Removing transcripts with ",Qtrm*100,
 							    " th quantile < = ",QtrmCut," \n",
-									length(NotAllZeroNames),"transcripts will be tested"))
+									length(NotAllZeroNames)," transcripts will be tested\n"))
 	if(length(NotAllZeroNames)==0)stop("0 transcript passed")
 	Data=Data[NotAllZeroNames,]
 	if(!is.null(NgVector))NgVector=NgVector[NotAllZeroNames]
