@@ -1,4 +1,4 @@
-2014/1/30: In EBSeq 1.3.3, the default setting of EBTest function will remove 
+2014-1-30: In EBSeq 1.3.3, the default setting of EBTest function will remove 
 low expressed genes (genes whose 75th quantile of normalized counts is less 
 than 10) before identifying DE genes. 
 These two thresholds can be changed in EBTest function.
@@ -6,3 +6,5 @@ We found that low expressed genes are more easily to be affected by noises.
 Removing these genes prior to downstream analyses can improve the 
 model fitting and reduce impacts of noisy genes (e.g. genes with outliers).
 
+2014-5-22: In EBSeq 1.5.2, numerical approximations are implemented to deal with
+underflow. The underflow is likely due to large number of samples.
